feat: added main layout and details of each section

--- a/index.html
+++ b/index.html
@@ -15,11 +15,127 @@
 <body>
     <div id="viewport-container">
         <div id="main-container">
+            <!-- HEADER START HERE -->
             <header>
     
             </header>
+            <!-- MAIN START HERE -->
             <main>
-    
+                <!-- UPGRADE -->
+                <div id="premium-upgrade">
+                    <button>Effettua upgrade</button>
+                </div>
+                <div id="main-inner">
+                    <!-- LINKS -->
+                    <div id="sections">
+                        <ul id="section-links">
+                            <li>
+                                <a href="#">in evidenza</a>
+                            </li>
+                            <li>
+                                <a href="#">podcast</a>
+                            </li>
+                            <li>
+                                <a href="#">classifiche</a>
+                            </li>
+                            <li>
+                                <a href="#">generi e mood</a>
+                            </li>
+                            <li>
+                                <a href="#">nuove uscite</a>
+                            </li>
+                            <li>
+                                <a href="#">scopri</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <!-- PLAYED SECTION -->
+                    <h2>Recently Played</h2>
+                    <div class="container" id="recently-played">
+                        <div class="cover">
+                            <div class="cover-img">
+                                <img src="img/metal_lifting.jpg" alt="metal_lifting">
+                            </div>
+                            <div class="cover-name"><strong>Heavy Metal</strong></div>
+                            <div class="cover-artist">Subtitle</div>
+                        </div>
+                        <div class="cover">
+                            <div class="cover-img">
+                                <img src="img/stranger.jpeg" alt="stranger">
+                            </div>
+                            <div class="cover-name"><strong>Stranger Things, Vol. 1 (a Netflix Original Series Soundtrack)</strong></div>
+                            <div class="cover-artist">Kile Dixon & Michael Stein</div>
+                        </div>
+                        <div class="cover">
+                            <div class="cover-img">
+                                <img src="img/aquietplace.jpeg" alt="a_quiet_place">
+                            </div>
+                            <div class="cover-name"><strong>A quiet place</strong></div>
+                            <div class="cover-artist">Subtitle</div>
+                        </div>
+                        <div class="cover">
+                            <div class="cover-img">
+                                <img src="img/split.jpeg" alt="split">
+                            </div>
+                            <div class="cover-name"><strong>Split</strong></div>
+                            <div class="cover-artist">Subtitle</div>
+                        </div>
+                        <div class="cover">
+                            <div class="cover-img">
+                                <img src="img/cure.jpeg" alt="a_cure_for_wellness">
+                            </div>
+                            <div class="cover-name"><strong>A cure for wellness</strong></div>
+                            <div class="cover-artist">Subtitle</div>
+                        </div>
+                        <div class="cover">
+                            <div class="cover-img">
+                                <img src="img/sinister.jpeg" alt="sinister">
+                            </div>
+                            <div class="cover-name"><strong>Sinister</strong></div>
+                            <div class="cover-artist">Subtitle</div>
+                        </div>
+                    </div>
+                    <!-- CORRELATED SECTION -->
+                    <h2>Creato per John Doe</h2>
+                    <p>Pi&#250; ascolti, pi&#250; accurati saranno i suggerimenti</p>
+                    <div class="container" id="correlated-search">
+                        <div class="cover">
+                            <div class="cover-img">
+                                <img src="img/radar.jpeg" alt="radar">
+                            </div>
+                            <div class="cover-name"><strong>Release Radar</strong></div>
+                        </div>
+                        <div class="cover">
+                            <div class="cover-img">
+                                <img src="img/mixdaily.jpeg" alt="mix_daily">
+                            </div>
+                            <div class="cover-name"><strong>Daily Mix 1</strong></div>
+                        </div>
+                    </div>
+                    <!-- FAMOUS ARTIST SECTION -->
+                    <h2>Artisti pi&#250; popolari</h2>
+                    <p>Pi&#250; ascolti, pi&#250; accurati saranno i suggerimenti</p>
+                    <div class="container" id="famous-artists">
+                        <div class="cover">
+                            <div class="cover-img">
+                                <img src="img/youg.jpeg" alt="youg">
+                            </div>
+                            <div class="cover-name"><strong>Youg Playlist</strong></div>
+                            <div class="cover-artist">Subtitle</div>
+                        </div>
+                        <div class="cover">
+                            <div class="cover-img">
+                                <img src="img/einaudi.jpeg" alt="einaudi">
+                            </div>
+                            <div class="cover-name"><strong>Einaudi Playlist</strong></div>
+                            <div class="cover-artist">Subtitle</div>
+                        </div>
+                    </div>
+                </div>
+
+
+
+
             </main>
         </div>
         <footer>
