feat: added footer/player scaffolding and flex layout

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
                 <div id="premium-upgrade">
                     <button>Effettua upgrade</button>
                 </div>
+                <!-- MAIN COVER SECTIONS-->
                 <div id="main-inner">
                     <!-- LINKS -->
                     <div id="sections">
@@ -132,13 +133,28 @@
                         </div>
                     </div>
                 </div>
-
-
-
-
             </main>
         </div>
-        <footer>
+        <!-- FOOTER START HERE -->
+        <footer id="player-nav">
+            <!-- LEFT -->
+            <div class="player-side" id="player-left">
+                <div id="p-left-image"></div>
+                <div id="p-left-title"></div>
+                <div id="p-left-icons"></div>
+            </div>
+            <!-- MIDDLE -->
+            <div class="player-main" id="player-center">
+                <div id="player-buttons"></div>
+                <div id="player-timeline"></div>
+            </div>
+            <!-- RIGHT -->
+            <div class="player-side" id="player-right">
+                <div class="icon"></div>
+                <div class="icon"></div>
+                <div class="icon"></div>
+                <div class="volume range-bar"></div>
+            </div>
 
         </footer>
     </div>
