feat: added footer section: left player-nav

--- a/index.html
+++ b/index.html
@@ -139,9 +139,21 @@
         <footer id="player-nav">
             <!-- LEFT -->
             <div class="player-side" id="player-left">
-                <div id="p-left-image"></div>
-                <div id="p-left-title"></div>
-                <div id="p-left-icons"></div>
+                <div id="p-left-image">
+                    <img src="img/sinister.jpeg" alt="playing-track">
+                </div>
+                <div id="p-left-title">
+                    <strong>Sinister</strong> 
+                    <p>Brano Nome</p>   
+                </div>
+                <div id="p-left-icons">
+                    <div id="heart">
+                        <i class="fa-regular fa-heart"></i>
+                    </div>
+                    <div id="folder">
+                        <i class="fa-regular fa-folder"></i>
+                    </div>
+                </div>
             </div>
             <!-- MIDDLE -->
             <div class="player-main" id="player-center">
