feat: added footer section: middle player-nav

--- a/index.html
+++ b/index.html
@@ -157,8 +157,28 @@
             </div>
             <!-- MIDDLE -->
             <div class="player-main" id="player-center">
-                <div id="player-buttons"></div>
-                <div id="player-timeline"></div>
+                <div id="player-buttons">
+                    <i class="fa-solid fa-shuffle"></i>
+                    <i class="fa-solid fa-backward-step"></i>
+                    <i class="fa-regular fa-circle-play"></i>
+                    <i class="fa-solid fa-forward-step"></i>
+                    <i class="fa-solid fa-rotate-right"></i>
+                </div>
+                <div id="player-timeline">
+                    <div id="play-time">
+                        <span>0:25</span>
+                    </div>
+                    <div id="player-bar">
+                        <div id="player-bar-total">
+                            <div id="player-bar-played">
+
+                            </div>
+                        </div>
+                    </div>
+                    <div id="player-final-time">
+                        <span>4:35</span>
+                    </div>
+                </div>
             </div>
             <!-- RIGHT -->
             <div class="player-side" id="player-right">
