feat: added footer section: right player-nav

--- a/index.html
+++ b/index.html
@@ -182,10 +182,14 @@
             </div>
             <!-- RIGHT -->
             <div class="player-side" id="player-right">
-                <div class="icon"></div>
-                <div class="icon"></div>
-                <div class="icon"></div>
-                <div class="volume range-bar"></div>
+                <i class="fa-solid fa-list-ul"></i>
+                <i class="fa-solid fa-desktop"></i>
+                <i class="fa-solid fa-volume-high"></i>
+                <div id="volume-bar">
+                    <div id="volume-range-bar">
+                        <div id="volume-played"></div>
+                    </div>
+                </div>
             </div>
 
         </footer>
