feat: added header top section

--- a/index.html
+++ b/index.html
@@ -17,7 +17,49 @@
         <div id="main-container">
             <!-- HEADER START HERE -->
             <header>
-    
+                <div id="header-top">
+                    <div id="logo">
+                        <img src="img/logo.svg" alt="logo">
+                        <img class="mobile-view" src="img/logo-small.svg" alt="logo-mobile-view">
+                    </div>
+                    <!-- NAV -->
+                    <nav>
+                        <!-- LINK LIST -->
+                        <ul>
+                            <li>
+                                <img src="img/home.svg" alt="home">
+                                <a class="desktop-view" href="#">Home</a>
+                            </li>
+                            <li>
+                                <img src="img/search.svg" alt="search">
+                                <a class="desktop-view" href="#">Cerca</a>
+                            </li>
+                            <li>
+                                <img src="img/libreria.svg" alt="library">
+                                <a class="desktop-view" href="#">La tua libreria</a>
+                            </li>
+                        </ul>
+                        <div id="playlist-container">
+                            <h3>Playlist</h3>
+                            <div id="create-playlist">
+                                <i class="fa-solid fa-square-plus"></i>
+                                <p>Crea Playlist</p>
+                            </div>
+                            <ul>
+                                <li>Nuova Playlist</li>
+                                <li>Nuova Playlist</li>
+                                <li>Nuova Playlist</li>
+                                <li>Nuova Playlist</li>
+                                <li>Nuova Playlist</li>
+                                <li>Nuova Playlist</li>
+                                <li>Nuova Playlist</li>
+                            </ul>
+                        </div>
+                    </nav>
+                </div>
+                <div id="header-bottom">
+
+                </div>
             </header>
             <!-- MAIN START HERE -->
             <main>
@@ -191,10 +233,7 @@
                     </div>
                 </div>
             </div>
-
         </footer>
     </div>
-    
-
 </body>
 </html>
