feat: added bottom header

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <div id="main-container">
             <!-- HEADER START HERE -->
             <header>
+                <!-- TOP-NAV -->
                 <div id="header-top">
                     <div id="logo">
                         <img src="img/logo.svg" alt="logo">
@@ -58,7 +59,17 @@
                     </nav>
                 </div>
                 <div id="header-bottom">
-
+                    <div id="download">
+                        <i class="fa-solid fa-circle-down"></i>
+                        <p>Installa App</p>
+                    </div>
+                    <hr>
+                    <div id="profile">
+                        <div id="profile-image">
+                            <img src="img/profile.svg" alt="profile">
+                        </div>
+                        <h3>John Doe</h3>
+                    </div>
                 </div>
             </header>
             <!-- MAIN START HERE -->
