feat: added hover effects

--- a/index.html
+++ b/index.html
@@ -26,20 +26,22 @@
                     <!-- NAV -->
                     <nav>
                         <!-- LINK LIST -->
-                        <ul>
-                            <li>
-                                <img src="img/home.svg" alt="home">
-                                <a class="desktop-view" href="#">Home</a>
-                            </li>
-                            <li>
-                                <img src="img/search.svg" alt="search">
-                                <a class="desktop-view" href="#">Cerca</a>
-                            </li>
-                            <li>
-                                <img src="img/libreria.svg" alt="library">
-                                <a class="desktop-view" href="#">La tua libreria</a>
-                            </li>
-                        </ul>
+                        <div id="main-links">
+                            <ul>
+                                <li>
+                                    <img src="img/home.svg" alt="home">
+                                    <a class="desktop-view" href="#">Home</a>
+                                </li>
+                                <li>
+                                    <img src="img/search.svg" alt="search">
+                                    <a class="desktop-view" href="#">Cerca</a>
+                                </li>
+                                <li>
+                                    <img src="img/libreria.svg" alt="library">
+                                    <a class="desktop-view" href="#">La tua libreria</a>
+                                </li>
+                            </ul>
+                        </div>
                         <div id="playlist-container">
                             <h3>Playlist</h3>
                             <div id="create-playlist">
@@ -47,13 +49,13 @@
                                 <p>Crea Playlist</p>
                             </div>
                             <ul>
-                                <li>Nuova Playlist</li>
-                                <li>Nuova Playlist</li>
-                                <li>Nuova Playlist</li>
-                                <li>Nuova Playlist</li>
-                                <li>Nuova Playlist</li>
-                                <li>Nuova Playlist</li>
-                                <li>Nuova Playlist</li>
+                                <li><a href="#">Nuova Playlist</a></li>
+                                <li><a href="#">Nuova Playlist</a></li>
+                                <li><a href="#">Nuova Playlist</a></li>
+                                <li><a href="#">Nuova Playlist</a></li>
+                                <li><a href="#">Nuova Playlist</a></li>
+                                <li><a href="#">Nuova Playlist</a></li>
+                                <li><a href="#">Nuova Playlist</a></li>
                             </ul>
                         </div>
                     </nav>
