feat: added media queries layout

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <!-- TOP-NAV -->
                 <div id="header-top">
                     <div id="logo">
-                        <img src="img/logo.svg" alt="logo">
+                        <img class="desktop-view" src="img/logo.svg" alt="logo">
                         <img class="mobile-view" src="img/logo-small.svg" alt="logo-mobile-view">
                     </div>
                     <!-- NAV -->
@@ -42,7 +42,7 @@
                                 </li>
                             </ul>
                         </div>
-                        <div id="playlist-container">
+                        <div class="desktop-view" id="playlist-container">
                             <h3>Playlist</h3>
                             <div id="create-playlist">
                                 <i class="fa-solid fa-square-plus"></i>
@@ -63,14 +63,14 @@
                 <div id="header-bottom">
                     <div id="download">
                         <i class="fa-solid fa-circle-down"></i>
-                        <p>Installa App</p>
+                        <p class="desktop-view" >Installa App</p>
                     </div>
-                    <hr>
+                    <hr class="desktop-view">
                     <div id="profile">
                         <div id="profile-image">
                             <img src="img/profile.svg" alt="profile">
                         </div>
-                        <h3>John Doe</h3>
+                        <h3 class="desktop-view">John Doe</h3>
                     </div>
                 </div>
             </header>
